# airflow

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  mypy.ini  pyproject.toml
.github/: README.md  VERIFICATION.md  dependabot.yml
.github/workflows/: cd.yml  ci.yml  e2e.yml  security.yml
airflow/: .dockerignore  Dockerfile
airflow/dags/: backup_dag.py  github_trending_dag.py  history_manager_dag.py  source_manager_dag.py
airflow/dags/dynamic_crawlers/: __init__.py
airflow/dags/tests/: test_dags.py
airflow/dags/utils/: __init__.py  advanced_dag_generator.py  auto_recovery.py  backup_service.py  code_validator.py  error_handler.py  etl_pipeline.py  gpt_service.py  mongo_service.py  playwright_executor.py  prometheus_metrics.py  self_healing.py
alertmanager/: alertmanager.yml
api/: .dockerignore  Dockerfile  requirements.txt
api/app/: __init__.py  main.py
api/app/auth/: __init__.py  api_key.py  dependencies.py  jwt_auth.py
api/app/core/: __init__.py  context.py  logging_config.py  secret_validator.py  startup_checks.py
api/app/exceptions/: __init__.py
api/app/middleware/: __init__.py  audit_log.py  metrics.py  rate_limiter.py  request_id.py  security_headers.py
api/app/models/: __init__.py  auth_schemas.py  backup_schemas.py  export_schemas.py  schemas.py
api/app/routers/: __init__.py  auth.py  auth_config.py  backup.py  catalog.py  contracts.py  crawlers.py  dashboard.py  data_quality.py  e2e_pipeline.py  errors.py  export.py  lineage.py  metrics.py  monitoring.py  production_data.py  quick_add.py  reviews.py  schemas.py  sources.py  versions.py
api/app/services/: __init__.py  airflow_trigger.py  auto_discovery.py  change_detection.py  data_promotion.py  e2e_pipeline.py  export_service.py  health_service.py  instant_etl.py  mongo_service.py  pg_schema.py  postgres_service.py  review_actions.py  review_service.py  test_crawler.py
api/app/services/alerts/: __init__.py  discord_client.py  dispatcher.py  email_client.py  slack_client.py  throttle.py  webhook_client.py
api/app/services/data_catalog/: __init__.py  catalog.py  lineage.py  models.py  search.py
api/app/services/data_contracts/: __init__.py  contract.py  expectations.py  reporter.py  validator.py
api/app/services/data_quality/: __init__.py  monitor.py  report.py  rules.py  validator.py
api/app/services/data_versioning/: __init__.py  diff.py  history.py  snapshot.py  versioning.py
api/app/services/idempotency/: __init__.py  deduplicator.py  manager.py
api/app/services/lineage/: __init__.py  graph.py  impact.py  tracker.py
api/app/services/observability/: __init__.py  alerts.py  dashboard.py  freshness.py  metrics.py  prometheus.py  sla.py
api/app/services/schema_registry/: __init__.py  compatibility.py  detector.py  evolution.py  models.py  registry.py  validator.py
api/app/services/streaming/: __init__.py  change_stream.py  event_processor.py  event_types.py  realtime_validator.py
api/app/utils/: __init__.py  circuit_breaker.py  retry.py
api/tests/: conftest.py  test_api.py  test_auth.py  test_db_exceptions.py  test_error_handling.py  test_sources.py  test_validation.py
crawlers/: __init__.py  base_crawler.py  csv_crawler.py  dynamic_table_crawler.py  excel_crawler.py  html_crawler.py  ocr_crawler.py  pdf_crawler.py  playwright_crawler.py  spa_crawler.py
crawlers/auth/: __init__.py  auth_crawler.py  session_manager.py
crawlers/utils/: __init__.py  ai_text_refiner.py  ocr_engine.py
docs/: EXCEPTION_VALIDATION_MANUAL.md  README.md  api-reference.md  architecture.md  ci-cd-pipeline.md  data-model.md  onboarding.md  operations-runbook.md
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  styles.css
frontend/src/api/: client.ts  dashboard.ts  dataQuality.ts  errors.ts  monitoring.ts  reviews.ts  sources.ts
frontend/src/components/: DataPanel.tsx  SourceViewer.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/review/: DataGrid.tsx  RejectReasonModal.tsx  ReviewToolbar.tsx  SourceViewer.tsx
frontend/src/components/source/: FieldEditor.tsx  SchedulePicker.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  ConfirmModal.test.tsx  ConfirmModal.tsx  LoadingSpinner.tsx  Stepper.test.tsx  Stepper.tsx  Toast.test.tsx  Toast.tsx
frontend/src/hooks/: useKeyboardReview.ts  useReviewSession.ts  useTheme.ts  useToast.tsx  useWebSocket.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: Dashboard.tsx  DashboardPage.tsx  DataQuality.tsx  Errors.tsx  Monitoring.tsx  QuickAdd.tsx  ReviewDashboard.tsx  ReviewPage.tsx  ReviewSession.tsx  SourceDetail.tsx  Sources.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
grafana/provisioning/dashboards/: crawler-overview.json  dashboards.yml  etl-pipeline-dashboard.json
grafana/provisioning/datasources/: datasources.yml
mongodb/init-scripts/: init.js
nginx/: nginx.conf
prometheus/: alert_rules.yml  prometheus.yml
scripts/: backup.sh  deploy.sh  init_mongodb.py  rollback.sh  setup.sh  start_dev.bat  start_dev.ps1  test_dev_setup.py
tests/: conftest.py  test_playwright_crawlers.py
tests/airflow/: test_etl_pipeline.py
tests/api/: test_e2e_api.py
tests/api/routers/: __init__.py  conftest.py  test_dashboard.py  test_health.py  test_reviews.py  test_sources.py
tests/api/services/: test_auth.py  test_data_contracts.py  test_data_quality.py  test_mongo_service.py  test_schema_registry.py  test_self_healing.py  test_streaming.py
tests/e2e/: README.md  playwright.config.ts  tsconfig.json
tests/e2e/fixtures/: api.fixture.ts  auth.fixture.ts  data.fixture.ts  global-setup.ts  global-teardown.ts  index.ts
tests/e2e/specs/: auth.spec.ts  crawler-workflow.spec.ts  dashboard.spec.ts  review-workflow.spec.ts  source-management.spec.ts
