[project]
name = "airflow-crawler-system"
version = "1.0.0"
description = "AI-powered web crawling automation system with Airflow orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Crawler System Team"}
]
keywords = ["airflow", "crawler", "web-scraping", "automation", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

[project.urls]
Homepage = "https://github.com/your-org/airflow-crawler-system"
Documentation = "https://github.com/your-org/airflow-crawler-system#readme"
Repository = "https://github.com/your-org/airflow-crawler-system.git"
Issues = "https://github.com/your-org/airflow-crawler-system/issues"

# ============================================================================
# Ruff Configuration - Fast Python Linter
# ============================================================================
[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".git",
    ".github",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
    "S",      # flake8-bandit (security)
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # do not perform function calls in argument defaults
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "S101",    # assert used (needed for tests)
    "S104",    # possible binding to all interfaces
    "S105",    # hardcoded password (false positives in tests)
    "S106",    # hardcoded password (false positives in tests)
    "ARG001",  # unused function argument (common in FastAPI)
    "ARG002",  # unused method argument
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    "S101",    # assert is fine in tests
    "S105",    # hardcoded passwords in tests
    "S106",    # hardcoded passwords in tests
    "ARG",     # unused arguments in fixtures
    "PLR2004", # magic values in tests
]
"airflow/dags/**/*.py" = [
    "ARG001",  # unused arguments common in DAG callbacks
]

[tool.ruff.lint.isort]
known-first-party = ["app", "crawlers"]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

# ============================================================================
# Black Configuration - Code Formatter
# ============================================================================
[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.github
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | __pycache__
  | build
  | dist
  | node_modules
  | venv
)/
'''

# ============================================================================
# MyPy Configuration - Static Type Checker
# ============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
strict_concatenate = true
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Ignore missing imports for third-party packages
ignore_missing_imports = true

# Per-module overrides
[[tool.mypy.overrides]]
module = [
    "tests.*",
    "conftest",
]
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "airflow.*",
    "pymongo.*",
    "motor.*",
    "fastapi.*",
    "pydantic.*",
    "uvicorn.*",
    "httpx.*",
    "easyocr.*",
    "cv2.*",
    "PIL.*",
    "selenium.*",
    "bs4.*",
    "lxml.*",
    "pdfplumber.*",
    "openpyxl.*",
    "pandas.*",
    "numpy.*",
    "croniter.*",
    "slowapi.*",
    "structlog.*",
    "playwright.*",
]
ignore_missing_imports = true

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["api/tests", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "-v",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["api/app", "crawlers"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/.venv/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2
fail_under = 70

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ============================================================================
# Bandit Configuration - Security Linter
# ============================================================================
[tool.bandit]
exclude_dirs = ["tests", "api/tests", ".venv", "venv"]
skips = ["B101", "B104"]
targets = ["api/app", "crawlers", "airflow/dags"]

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py", "conftest.py"]
